[package]
name = "node_exporter"
version = "0.1.0"
edition = "2021"



[dependencies]
chrono = "0.4"
futures = "0.3"
mongodb = "3.0" # or the version you are using
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.27"
libbpf-cargo = "0.23"
libbpf-rs = "0.23"
aya = "0.12"
pnet = "0.35.0"
pcap = "0.8"
